plugins/kotlin/idea/tests/testData/highlighterMetaInfo/NonNullAssertion.kt.highlighting
// FIR_IDENTICAL
fun <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>test<!>(<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>s<!>: <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_CLASS'")!>String<!>?) {
    <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>s<!><!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_EXCLEXCL'")!>!!<!>.<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_INSTANCE_PROPERTY'")!>length<!>
}
